# gtk4-css-shadow

./: README.md  com.github.molnarandris.gtk4_css_shadow.json  meson.build
data/: com.github.molnarandris.gtk4_css_shadow.appdata.xml.in  com.github.molnarandris.gtk4_css_shadow.desktop.in  com.github.molnarandris.gtk4_css_shadow.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: css_shadows.css  cssview.css  gtk4_css_shadow.gresource.xml  gtk4_css_shadow.in  main.py  meson.build  window.py  window.ui
